--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.2",
     "cheerio": "^1.0.0",
+    "express": "^4.21.2",
     "puppeteer": "^24.4.0"
   }
 }
